--- a/paper/13.0 required rate of return.Rmd
+++ b/paper/13.0 required rate of return.Rmd
@@ -12,7 +12,7 @@ $$
 
 As with the discussion in Section \@ref{capital-deployment}, we use the naught subscript to represent the base case. 
 
-We can calculate $E(R_0)$, $var(R_0)$ as presented below under the following assumptions:
+We can calculate $E(R_0)$, $Var(R_0)$ as presented below under the following assumptions:
 
 * The risk free rate, $r_f$, is fixed and 
 * $X$ and $r_c$ are independent.
@@ -21,11 +21,11 @@ Starting with the equation from Section 2.1:
 
 $$
 \begin{aligned}
-E[R_{0}] &= E[\dfrac{r_c \times CW_{0} + r_f \times CX_{0}}{C}]\\
-&=\dfrac{CW_{0}\times r_c}{C} + \dfrac{r_f \times CX_{0}}{C}\\
-&=\frac{(C-CX_{0})\times r_c}{C} +\frac{r_f \times CX_{0}}{C}\\
+E[R_{0}] &= E[\dfrac{r_c \times CW_{0} + r_f \times C_{X}^{0}}{C}]\\
+&=\dfrac{CW_{0}\times r_c}{C} + \dfrac{r_f \times C_{X}^{0}}{C}\\
+&=\frac{(C-C_{X}^{0})\times r_c}{C} +\frac{r_f \times C_{X}^{0}}{C}\\
 \\
-Var[R_{0}] &= Var[\dfrac{r_c \times CW_{0} + r_f \times CX_{0} - X}{C})\\
+Var[R_{0}] &= Var[\dfrac{r_c \times CW_{0} + r_f \times C_{X}^{0} - X}{C})\\
 &=\dfrac{Var(X)}{C^2}
 \end{aligned}
 $$
@@ -33,8 +33,8 @@ $$
 
 \begin{align}
 \nonumber \text{Sharpe Ratio}_0 &=\frac{E(R_0)-r_f}{\sigma_{R_0}}\\
-\nonumber &=\frac{(C-CX_{0})\times r_c + r_f \times CX_{0}-r_f \times C}{C} / (\frac{Var(X)}{C^2})^{0.5}\\
-\nonumber  &=\frac{(C-CX_{0})\times (r_c-r_f)}{SD(X)}\\
+\nonumber &=\frac{(C-C_{X}^{0})\times r_c + r_f \times C_{X}^{0}-r_f \times C}{C} / (\frac{Var(X)}{C^2})^{0.5}\\
+\nonumber  &=\frac{(C-C_{X}^{0})\times (r_c-r_f)}{SD(X)}\\
 \end{align}
 
 
@@ -43,9 +43,9 @@ $$
 We can also calculate the Sharpe Ratio for the insurance buyer, using the subscript $I$ to represent this case and starting with the equation from Section 2.2:
 $$
 \begin{aligned}
-E[R_{I}] &= E[\dfrac{r_c \times (C - PX_{I}) - PX_{I}}{C}]\\
+E[R_{I}] &= E[\dfrac{r_c \times (C - P^{I}) - P^{I}}{C}]\\
 \\
-Var[R_{I}] &= Var(\dfrac{r_c \times (C - PX_{I}) + r_f \times CX_{I} - X_{ret} - PX_{I}}{C})\\
+Var[R_{I}] &= Var(\dfrac{r_c \times (C - P^{I}) + r_f \times C_{X}^{I} - X_{ret} - P^{I}}{C})\\
 &=\dfrac{Var(X_{ret})}{C^2}
 \end{aligned}
 $$ 
@@ -54,8 +54,8 @@ Now we calculate the Sharpe Ratio under the insurance case:
 
 \begin{align}
 \nonumber \text{Sharpe Ratio}_I &= \frac{E(R_I)-r_f}{\sigma_{R_0}}\\
-\nonumber &=\frac{(C - PX_{I})\times r_c-PX_{I}-C \times rf}{C}\ / (\frac{Var(X_{ret})}{C^2})^{0.5}\\
-&=\dfrac{C\times (r_c-r_f)-PX_{I} \times(1 + r_c)}{SD(X_{ret})}
+\nonumber &=\frac{(C - P^{I})\times r_c-P^{I}-C \times rf}{C}\ / (\frac{Var(X_{ret})}{C^2})^{0.5}\\
+&=\dfrac{C\times (r_c-r_f)-P^{I} \times(1 + r_c)}{SD(X_{ret})}
 \end{align}
 
 
@@ -65,11 +65,18 @@ The insurance purchase created value when it results in an increase in the Sharp
 
 \begin{align}
 \nonumber \text{Sharpe Ratio}_I &> \text{Sharpe Ratio}_0\\
-\nonumber \dfrac{C\times (r_c-r_f)-P \times(1 + r_c)}{SD(X_{ret})} &> \dfrac{(C-CX_{0})\times (r_c-r_f)}{SD(X)}\\
-\nonumber -PX_{I} \times(1 + r_c) &> \dfrac{SD(X_{ret})}{SD(X)} \times (r_c-r_f) \times (C - CX_{0} - C)\\
-\nonumber -PX_{I} \times(1 + r_c) &> \dfrac{SD(X_{ret})}{SD(X)} \times (r_c-r_f) \times (-CX_{0})\\
-\nonumber -PX_{I}  &> - CX_{0} \times \dfrac{(r_c-r_f)}{(1 + r_c)} \times \dfrac{SD(X_{ret})}{SD(X)}\\
-PX_{I}  &< CX_{0} \times \dfrac{(r_c-r_f)}{(1 + r_c)} \times \dfrac{SD(X_{ret})}{SD(X)}
+\nonumber \dfrac{C\times (r_c-r_f)-P^{I} \times(1 + r_c)}{SD(X_{ret})} &> \dfrac{(C-C_{X}^{0})\times (r_c-r_f)}{SD(X)}\\
+\nonumber C\times (r_c-r_f)-P^{I} \times(1 + r_c) &> \dfrac{SD(X_{ret})}{SD(X)} \times (C-C_{X}^{0})\times (r_c-r_f)\\
+\nonumber -P^{I} \times(1 + r_c) &> \dfrac{SD(X_{ret})}{SD(X)}\times (C-C_{X}^{0}) \times (r_c-r_f)- C \times (r_c-r_f)\\
+\nonumber -P^{I} \times(1 + r_c) &> (r_c-r_f) \times [\dfrac{SD(X_{ret})}{SD(X)}\times (C-C_{X}^{0}) - C]\\ 
+\nonumber P^{I} &< \dfrac{(r_c-r_f)}{(1 + r_c)} \times [\dfrac{SD(X_{ret})}{SD(X)}\times (C_{X}^{0}- C) + C]\\ 
+P^{I} &< \dfrac{(r_c-r_f)}{(1 + r_c)} \times [C - \dfrac{SD(X_{ret})}{SD(X)}\times CW_{0}]
 \end{align}
 
-In interpreting this equation, we should recognize that the unlimited variance of claim amounts may be allocated between retained and excess (insured) components. As such, when the insured retains more risk, ....
+The interpretation of Equation (*) is slightly more difficult. However, we can recognize that second term on the righthand side is a measure of capital unavailable deployment and: 
+
+- $\dfrac{SD(X_{ret})}{SD(X)} \leq 1$
+- if $\dfrac{SD(X_{ret})}{SD(X)} = 1$, then we have the no insurance case and the second term simplifies to $C_{X}^{0}$
+- if $\dfrac{SD(X_{ret})}{SD(X)} < 1$, then the second term is greater than $C_{X}^{0}$.
+
+So we can now undertsand that we can pay a higher premiums than we derived in Equation (*) becuase we received the value of risk reduction.
