--- a/paper/10.0 final control.Rmd
+++ b/paper/10.0 final control.Rmd
@@ -8,7 +8,7 @@ output:
   pdf_document: 
     fig_caption: yes
     number_sections: true
-abstract: "Insurance serves both as a source of loss reimbursment and contingent capital. Working layers principally provide loss reimbursement while high excess layer insurance serve mostly as contingent capital. Firms rarely access high excess layers, and the expected value of claims in those layers is minimal. As such, the insurance policy provides two sources of value. First, it allows the firm to deploy the capital that it would otherwise need to set aside to weather an extreme loss event. Secondly, by decreasing earnings volatility it reduces the return on capital demanded by its shareholder. This paper describes an approach to measure these source of value."
+abstract: "Insurance serves both as a source of loss reimbursment and contingent capital. The expected value of claims (i.e., loss reimburement value) for the insured in high excess layers is minimal so the principal value of high exces layer insurance is as a source of contingent capital. This paper describes an approach to measure this source of value." 
 
 ---
 <!-- Set knitr options -->
