--- a/paper/12.0 capital deployment.Rmd
+++ b/paper/12.0 capital deployment.Rmd
@@ -9,19 +9,19 @@ In our review, we assume the following:
 
 -   The firm requires a minimum level of capital, $C_m$, to continue as a going concern.
 
--   We denote deployed capital, i.e., the working capital, as $C_W$.
+-   We denote deployed capital, i.e., the working capital, as $C_w$.
 
 -   The firm is subject to the loss events that result in aggregate claim
-    amounts, $X$. We present distribution of claim amounts in Figure 2^[This is an illustrative claim distribution that we present to support further development of value measurement.].
+    amounts, $X$. We present distribution of claim amounts in Figure \ref{fig:clm-dist}^[This is an illustrative claim distribution that we present to support further development of value measurement.].
 
     -   For simplicity, we assume information symmetry as respects $X$. That is,
         the insurer and the insured use the same distribution for $X$.
 
     -   We denote the maximum probable claim amount as $X_m$.
 
-    -   The scale of $X$ is a function of $C_W$.
+    -   The scale of $X$ is a function of $C_w$.
 
-```{r claim-distribution, echo=FALSE, fig.cap="Illustrative Claim (X) Distribution", fig.height=3, fig.width=5, message=FALSE, paged.print=FALSE}
+```{r claim-distribution, echo=FALSE, fig.cap="\\label{fig:clm-dist}Illustrative Claim (X) Distribution", fig.height=3, fig.width=5, message=FALSE, paged.print=FALSE}
     par(mar = c(2, 2, 1, 1))
     rate <- 6
     dens <- 100
@@ -35,9 +35,7 @@ In our review, we assume the following:
     mtext(text = 'Density', side = 2, line = 0.5, cex = 0.7)
     ```
   
-- The firm has an enterprise risk management (ERM) strategy underlying its
-    capital allocation. Its ERM strategy dictates that it can absorb a claim at
-    the $p^{th}$ percentile of the distribution of $X$ which we denote as $X_p$.
+- The firm has an enterprise risk management (ERM) strategy underlying its capital allocation. Its ERM strategy dictates that it can absorb a claim at the $p^{th}$ percentile of the distribution of $X$ which we denote as $X_p$.
 
 -   The firm is able to generates a return on capital of $r_c$. For purposes of determining the value of insurance, we use a simplifying assumption that $r_c$ is fixed. That is, $E(r_c)=r_c$ and $Var(r_c)=0$. 
 
@@ -49,9 +47,9 @@ In order to measure of the value of insurance related to the firm's ability to d
 
 When a firm retains risk, it must allocate capital for that risk. The firm may allocate that capital with or without a formal analysis as to the amount of capital that it must set aside. In this section, we present an example of actions that a firm with an ERM strategy may take when faced with risk.  We recognize that not all firms will allocate capital using this type of analysis. 
 
-The firm's ERM strategy will require that it set aside a reserve for the possibility of that it experiences a capital depletion event. We denote this reserve as $C_{X}$, to indicate that the reserve is a segregation of capital to absorb realizations of $X$ that reduce $C$ below $C_m$. We present that capital allocation approach in Figure X.
+The firm's ERM strategy will require that it set aside a reserve for the possibility of that it experiences a capital depletion event. We denote this reserve as $C_{x}$, to indicate that the reserve is a segregation of capital to absorb realizations of $X$ that reduce $C$ below $C_m$. We present that capital allocation approach in Figure \ref{fig:cap-deploy}.
 
-```{r No Insurnace, echo=FALSE, fig.height=4, fig.width=6, message=FALSE, paged.print=FALSE, fig.cap="Capital Deployment"}
+```{r No Insurnace, echo=FALSE, fig.height=4, fig.width=6, message=FALSE, paged.print=FALSE, fig.cap="\\label{fig:cap-deploy}Capital Deployment"}
 par(mar = c(1, 1, 1, 1))
 
 scale <- 10
@@ -141,7 +139,7 @@ text(x = center, y = mean(
   )), 
   label = expression(italic(C)[`X`]), cex = 0.7)
 
-text(x = center, y = 5, label = expression(italic(C)[`W`]), cex = 0.7, col = 'red')
+text(x = center, y = 5, label = expression(italic(C)[`w`]), cex = 0.7, col = 'red')
 
 text(x = center, y = 1.05 * scale, label = 'Available Capital', cex = 0.7)
 
@@ -152,7 +150,7 @@ Using the naught superscript to represent this base case, the rate of return is
 then as follows:
 
 \begin{equation}
-R_{0} = \dfrac{r_c \times C_{W}^{0} + r_f \times C_{X}^{0} - X}{C}
+R^0 = \dfrac{r_c \times C_{w}^{0} + r_f \times C_{x}^{0} - X}{C} \label{eqn:return-base}
 \end{equation}
 
 The numerator is the sum of the return on working capital and the return on the
@@ -161,51 +159,51 @@ reserve, less the value of the claim amount. The inclusion of the random variabl
 We note however that  expected value of $X$ in high excess layers is nearly 0. That is, $E[X] \approx 0$. As s result, taking expectations we have:
 
 \begin{equation}
-E[R_{0}] = \dfrac{r_c \times C_{W}^{0} + r_f \times C_{X}^{0}}{C}
+E[R^0] = \dfrac{r_c \times C_{w}^{0} + r_f \times C_{x}^{0}}{C} \label{eqn:exp-return-base}
 \end{equation}
 
 ## Rate of Return with Insurance
 
-The firm may alternatively elect to purchases insurance to cover a portion of loss event. We use the following notation in our rate of return equation:
+The firm may alternatively elect to purchases insurance to cover a portion of loss event. We develop that rate of return in this section. We use the following notation in our rate of return equation:
 
-* $X_{ret}$ represents portion of the distribution of claims values that the
-firm retains. We allow $X_{ret}$ (i.e. to $L$) vary between 0 (equal to the no insurance case) and $X_m$ (in which case, the firm fully transfers the risk). We observe that if retention will not reduce capital below $C_m$, i.e. $0 < X_{ret} < (C_W - C_m)$, then no capital need to be set aside to cover loss events, i.e., $C_x = 0$.
+* $X_{ret}$ represents portion of the distribution of claims values that the firm retains. We allow $X_{ret}$ to vary between 0 (equal to the no insurance case) and $X_m$ (in which case, the firm fully transfers the risk). We observe that if retention will not reduce capital below $C_m$, i.e. $0 < X_{ret} < (C_w - C_m)$, then no capital need to be set aside to cover loss events, i.e., $C_x = 0$.
 
-We use superscript, $I$, to represent the "insurance case." Then we use $P^{I}$ for premium (in the insurance case) for consistency with the $C_{X}^{0}$ notation that we use for capital. (They both represent approaches to fund losses excess of a retention.) The rate of return is then as follows:
+* We use superscript, $I$, to represent the "insurance case."
+
+* We use $P^{I}$ for premium (in the insurance case) for consistency with the $C_{x}^{0}$ notation that we use for capital. (They both represent approaches to fund losses excess of a retention.) The rate of return is then as follows:
 
 \begin{equation}
-R_{I} = \dfrac{r_c \times (C - C_{X}^{I} - P^{I}) + r_f \times C_{X}^{I} - X_{ret} - P^{I}}{C}
+R^I = \dfrac{r_c \times (C - C_{x}^{I} - P^{I}) + r_f \times C_{x}^{I} - X_{ret} - P^{I}}{C} \label{eqn:return-ins}
 \end{equation}
 
-The rational firm (where $r_c > r_f$[^2]) purchases insurance such that it need not set aside any capital. Therefore, $C_{X}^{I} = 0$ and $C_{W}^{I} = C - P^{I}$.
+The rational firm (where $r_c > r_f$^[Without this condition there is no economic value to the firm's existence.]) purchases insurance such that it need not set aside any capital. Therefore, $C_{x}^{I} = 0$ and $C_{w}^{I} = C - P^{I}$.
 
 As we noted above that $E[X] \approx 0$, we also note that $E[X_{ret}] \approx 0$ and $E[X - X_{ret}] \approx 0$. We can then simplify our rate of return equation to:
 
 \begin{equation}
-E[R_{I}] = \dfrac{r_c \times (C - P^{I}) - P^{I}}{C}
+E[R^I] = \dfrac{r_c \times (C - P^{I}) - P^{I}}{C} \label{eqn:exp-return-ins}
 \end{equation}
 
-* We recognize that $P^{I}$ is the sum of the expected loss $E[X - X_{ret}]$ and an insurance charge. As noted, the expected loss is approximately $0$. The insurance charge compensates the insurer for underwriting the exposure and provides for a return on its capital. Therefore we expect the insurance charge to be a function of $Var(X - X_{ret})$. However, the firm only observes premiums quoted under various options. As such, it is not concerned with the function the insurer uses to develop its risk charge but it is aware that the premium is almsot entirely comprised of the risk charge.
+We recognize that $P^{I}$ is the sum of the expected loss $E[X - X_{ret}]$ and an insurance charge. As noted, the expected loss is approximately $0$. The insurance charge compensates the insurer for underwriting the exposure and provides for a return on its capital. Therefore we expect the insurance charge to be a function of $Var(X - X_{ret})$^[We recognize that the insurer has the ability to diversify this volatility across risks. As a result the function referenced can result in a premiums that creates value.] 
 
+In this construct, the prospective insured only observes premiums quoted under various options. As such, it is not concerned with the function the insurer uses to develop its risk charge but it is aware that the premium is almost entirely comprised of the risk charge.
 
 ## Value Creation
 
-We observe that the purchase of insurance creates value when: 
+The insurance transaction creates value when the expected return for the insurance buyer exceeds the expected return without insurance. Specifically, we compare the expected returns from equation~\ref{eqn:exp-return-base} and equation~\ref{eqn:exp-return-ins}. We observe that the purchase of insurance creates value when: 
 
 \begin{align}
-\nonumber E[R_I] &> E[R_0] \\
-\nonumber r_c \times (C - P^{I}) - P^{I} &> r_c \times C_{W}^{I} + r_f \times C_{X}^{0} \\
-\nonumber r_c \times C - r_c \times P^{I} - P^{I} &>  r_c \times C_{W}^{I} + r_f \times C_{X}^{0}\\
-\nonumber -P^{I} \times (1 + r_c) &> r_c \times C_{W}^{I} + r_f \times C_{X}^{0} - r_c \times C\\
-\nonumber -P^{I} \times (1 + r_c) &> r_c \times (C_{W}^{I} - C) + r_f \times C_{X}^{0}\\
-\nonumber -P^{I}  &> \dfrac{r_c \times (C_{W}^{I} - C) + r_f \times C_{X}^{0}}{1 + r_c}\\
-\nonumber -P^{I} &> \dfrac{r_c \times (C_{W}^{I} - C) + r_f \times C_{X}^{0}}{1 + r_c}\\
-\nonumber -P^{I} &> \dfrac{r_c \times (-C_{X}^{0}) + r_f \times C_{X}^{0}}{1 + r_c}\\
-\nonumber -P^{I} &> C_{X}^{0} \times \dfrac{r_f - r_c}{1 + r_c}\\
-P^{I} &< C_{X}^{0} \times \dfrac{r_c - r_f}{1 + r_c}
+\nonumber E[R^I] &> E[R^0] \\
+\nonumber r_c \times (C - P^{I}) - P^{I} &> r_c \times C_{w}^{I} + r_f \times C_{x}^{0} \\
+\nonumber r_c \times C - r_c \times P^{I} - P^{I} &>  r_c \times C_{w}^{I} + r_f \times C_{x}^{0}\\
+\nonumber -P^{I} \times (1 + r_c) &> r_c \times C_{w}^{I} + r_f \times C_{x}^{0} - r_c \times C\\
+\nonumber -P^{I} \times (1 + r_c) &> r_c \times (C_{w}^{I} - C) + r_f \times C_{x}^{0}\\
+\nonumber -P^{I}  &> \dfrac{r_c \times (C_{w}^{I} - C) + r_f \times C_{x}^{0}}{1 + r_c}\\
+\nonumber -P^{I} &> \dfrac{r_c \times (C_{w}^{I} - C) + r_f \times C_{x}^{0}}{1 + r_c}\\
+\nonumber -P^{I} &> \dfrac{r_c \times (-C_{x}^{0}) + r_f \times C_{x}^{0}}{1 + r_c}\\
+\nonumber -P^{I} &> C_{x}^{0} \times \dfrac{r_f - r_c}{1 + r_c}\\
+P^{I} &< C_{x}^{0} \times \dfrac{r_c - r_f}{1 + r_c} \label{eqn:cap-deploy}
 \end{align}
 
-The equation has a straightforward intuitive interpretation that the insurance transaction creates value when the premium is less than the excess return on capital that would be earned on the reserve reduced for the return on capital if the premium amount were also deployed as capital.
-
-[^2]: Without this condition there is no economic value to the firm's existence.
+Equation~(\ref{eqn:cap-deploy}) has a straightforward intuitive interpretation that the insurance transaction creates value when the premium is less than the excess return on capital that would be earned on the reserve reduced for the return on capital if the premium amount were also deployed as capital.
 
